@@ -26,6 +26,10 @@ class XapitMember
     end
   end
   
+  def self.find_by_id(id)
+    find(id)
+  end
+  
   def initialize(attributes = {})
     @@records ||= []
     @id = @@records.size + 1
